Start von mises

--- a/sketch.ipynb
+++ b/sketch.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import IPython.display as ipd\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import torchaudio"
@@ -16,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,15 +93,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b1/m5y5wflj5c98rzd65cdc_l5h0000gn/T/ipykernel_47824/4013527012.py:58: RuntimeWarning: divide by zero encountered in log10\n",
-      "  level_db = 20 * np.log10(rms)\n"
+      "/var/folders/b1/m5y5wflj5c98rzd65cdc_l5h0000gn/T/ipykernel_49687/4013527012.py:58: RuntimeWarning: divide by zero encountered in log10\n",
+      "  level_db = 20 * np.log10(rms)\n",
+      "2023-04-30 17:24:07.305066: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1 Max\n",
+      "\n",
+      "systemMemory: 32.00 GB\n",
+      "maxCacheSize: 10.67 GB\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-30 17:24:07.305181: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -119,6 +137,26 @@
     "audio_in = get_segments_above_threshold(audio_in, num_samples=num_samples, threshold_db=-30)\n",
     "dataset = tf.convert_to_tensor(audio_in)\n",
     "dataset = apply_stft(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8448"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_samples"
    ]
   },
   {
